k8s/overlays/jbpm-only/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jbpm
  labels:
    app.kubernetes.io/name: jbpm
